--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,6 +3,9 @@
 $font-path: "../assets/fonts";
 
 @import "ionic.globals";
+@import "../pages/home/home";
+@import "../pages/about/about";
+@import "../pages/contact/contact";
 
 
 // Shared Variables
