--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -6,6 +6,11 @@
 background: url('../../assets/background/backgroundsmall.jpg') no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
-//  -o-background-size: cover;
   background-size: cover;
+   margin-bottom: 0px;
+}
+
+.col-33 {
+  width: 33%;
+  float:left;
 }
